2013-07-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.4 release procedure:
 	Changes since nco-4_3_3: fxm
	cd ~/nco;cvs tag -d nco-4_3_4;cvs tag -d nco-4_3_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.4 release"
	cvs tag -c nco-4_3_4;cvs tag -c nco-4_3_4-1

	* NCO 4.3.3 release procedure:
 	Changes since nco-4_3_2: CDL, XML, ncrename/ncwa groups
	cd ~/nco;cvs tag -d nco-4_3_3;cvs tag -d nco-4_3_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.3 release"
	cvs tag -c nco-4_3_3;cvs tag -c nco-4_3_3-1

	* Modernize configure.ac and Makefile.am as per automake/autoconf recommendations

	* Rename configure.in to configure.ac

	* Add autobld/test_driver (created with automake --add-missing)

	* Rewrite MD5 infrastructure the right way, i.e., like GPE: use/pass dynamic structures

2013-07-24 Pedro Vicente  <pvicente@uci.edu>

	* Add in_grp_3.cdl group data for ncwa testing

	* Add ncwa test #41 (Groups) Dimension reduction with min flag on type float variable
	* Add ncwa test #42 (Groups) Dimension reduction on type double variable with max switch and missing values
	* Add ncwa test #43 (Groups) Dimension reduction on type double variable
	* Add ncwa test #44 (Groups) rms with weights

2013-07-24  Charlie Zender  <zender@uci.edu>

	* Adhere to hdr_pad option when using ncpdq for packing

	* Place MD5 flags in md5_flg structure

	* Fix ncwa OpenMP

	* Document new ncatted, ncrename, ncks, ncwa features in man pages, nco.texi

2013-07-23  Charlie Zender  <zender@uci.edu>

	* ncrename -g works when linked to new libnetcdf nc_rename_grp() function

	* ncks now writes MD5 attributes with --md5 -D 6+ to netCDF4 files

	* CDL mode prints NC_STRING's and arrays of NC_STRING correctly,
	in both attributes and data sections. CDL mode appears to be ready.

	* ncatted: Works with single NC_STRING's (previous versions of
	ncatted completely and utterly fail with all NC_STRINGs).
	Still fails on NC_STRING arrays because parser is not smart.
