@@ -6,6 +6,8 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.3.4 release"
 	cvs tag -c nco-4_3_4;cvs tag -c nco-4_3_4-1
 
+	* Conceal math float definitions in nco_rth_flt.h from LINUXAMD64 to allow yellowstone g++ to build ncap2
+
 	* NCO 4.3.3 release procedure:
  	Changes since nco-4_3_2: CDL, XML, ncrename/ncwa groups
 	cd ~/nco;cvs tag -d nco-4_3_3;cvs tag -d nco-4_3_3-1
